Fixed toolbar overlap

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,5 +1,5 @@
-ons-navigator {
-    margin-top: 0.5%;
+.body-margin-top {
+    margin-top: 12px;
 }
 
 .list-row {
